[package]
name = "advent_of_code"
version = "0.1.0"
authors = ["Jakub Bandola <xxxkubikx@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#md5 = "0.7.0"
#regex = "1.4.2"
#substring = "1.4.0"
#serde_json = "1.0.59"